kubernetes/voting-app/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: azure-vote-front
          image: codehunterstrainingacr.azurecr.io/azure-vote-front:v1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
