kubernetes/voting-app/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: voting-app
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: azure-vote-back
