kubernetes/voting-app/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: voting-app
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: azure-vote-front
