kubernetes/voting-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    -  http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: azure-vote-front
                 port:
                   number: 80
